# CMakePresetsShow

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Config.cmake.in
.github/workflows/: conf-build-test.yml
Latex/: .gitignore  beamerthemeMedian.sty  document.tex
LibraryConsumer/: CMakeLists.txt
examples/: CMakeLists.txt  example.cpp
include/amarula/foo/: foo.hpp
src/: client_app.cpp  foo.cpp  server_app.cpp
tests/: CMakeLists.txt  test.cpp
